samples/_failures_safe/1761343855_6384ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f3d55ef.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_5f3d55ef.c:147:62: error: missing terminating " character
  147 |         strftime(entry->timestamp, sizeof(entry->timestamp), "%Y-%m-%d
      |                                                              ^~~~~~~~~
./samples/SAFE/__tmp_5f3d55ef.c:147:9: error: expected expression at end of input
  147 |         strftime(entry->timestamp, sizeof(entry->timestamp), "%Y-%m-%d
      |         ^~~~~~~~
./samples/SAFE/__tmp_5f3d55ef.c:147:9: error: too few arguments to function ‘strftime’
In file included from ./samples/SAFE/__tmp_5f3d55ef.c:6:
/usr/include/time.h:100:15: note: declared here
  100 | extern size_t strftime (char *__restrict __s, size_t __maxsize,
      |               ^~~~~~~~
./samples/SAFE/__tmp_5f3d55ef.c:147:9: error: expected declaration or statement at end of input
  147 |         strftime(entry->timestamp, sizeof(entry->timestamp), "%Y-%m-%d
      |         ^~~~~~~~
./samples/SAFE/__tmp_5f3d55ef.c:147:9: error: expected declaration or statement at end of input
